# surfwax

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/documentation/: boxfilter.md  extrema.md  hessian.md  surf.md
src/hummie/: boxfilter.py  extrema.py  gradient.py  hessian.py  image.py  surf.py  volume.py
src/surfwax/: _util.py  boxfilter.py  extrema.py  haar.py  hessian.py  surf.py  surf3d.py  types.py
