[project]
name = "hummie"
version = "0.1.0"
description = "JAX implementation of SURF."
authors = [{ name = "Matt Black", email = "matt.black7@gmail.com" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
keywords = ["jax"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax (>=0.6.0,<0.7.0)",
    "jaxtyping (>=0.3.1,<0.4.0)",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "tifffile>=2025.3.30,<2026",
    "matplotlib>=3.10.1,<4",
    "black>=25.1.0,<26",
    "mkdocs>=1.6.1,<2",
    "darglint>=1.8.1,<2",
    "flake8>=7.2.0,<8",
    "isort>=6.0.1,<7",
    "mypy>=1.15.0,<2",
    "pyupgrade>=3.19.1,<4",
    "typeguard>=4.4.2,<5",
    "pre-commit>=4.2.0,<5",
    "pre-commit-hooks>=5.0.0,<6",
    "mkdocstrings-python>=1.16.10,<2",
    "mkdocs-material>=9.6.12,<10",
]

[tool.hatch.build.targets.sdist]
include = ["src/hummie"]

[tool.hatch.build.targets.wheel]
include = ["src/hummie"]

[tool.hatch.build.targets.wheel.sources]
"src/hummie" = "hummie"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
src_paths = [ "src", "tests" ]
